fixing bug where message breaks row if it's too long

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ input.textbox {
 
 .msg-height {
   min-height: 65px;
-  position: static;
+  flex-shrink: 0;
 } 
 
 #footer-bottom {
